[gd_scene load_steps=15 format=3 uid="uid://dewfhpt33ckoh"]

[ext_resource type="Script" path="res://gallina.gd" id="1_b8hmg"]
[ext_resource type="Texture2D" uid="uid://crhvj0bsvivs7" path="res://sprites/Recursos F1001B - ICT/Enemigos/image001.png" id="2_4oqyp"]
[ext_resource type="Texture2D" uid="uid://dj355t48egmai" path="res://sprites/New Piskel.png" id="2_cbt21"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mtxhq"]
atlas = ExtResource("2_cbt21")
region = Rect2(0, 0, 728, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3qda"]
atlas = ExtResource("2_cbt21")
region = Rect2(2184, 0, 728, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctyqy"]
atlas = ExtResource("2_cbt21")
region = Rect2(1456, 0, 728, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1003"]
atlas = ExtResource("2_cbt21")
region = Rect2(728, 0, 728, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_axelv"]
atlas = ExtResource("2_4oqyp")
region = Rect2(0, 0, 592, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_denwk"]
atlas = ExtResource("2_4oqyp")
region = Rect2(592, 0, 592, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wy7a"]
atlas = ExtResource("2_4oqyp")
region = Rect2(1776, 0, 592, 800)

[sub_resource type="AtlasTexture" id="AtlasTexture_nilty"]
atlas = ExtResource("2_4oqyp")
region = Rect2(1184, 0, 592, 800)

[sub_resource type="SpriteFrames" id="SpriteFrames_6a8bn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtxhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3qda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctyqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1003")
}],
"loop": true,
"name": &"atack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axelv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_denwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wy7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nilty")
}],
"loop": true,
"name": &"caminar",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pdaes"]
size = Vector2(12, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gvlfw"]
size = Vector2(19, 18)

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(1, 0)
script = ExtResource("1_b8hmg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(98.25, 148.748)
scale = Vector2(0.02, 0.02)
sprite_frames = SubResource("SpriteFrames_6a8bn")
animation = &"atack"
frame_progress = 0.912795

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(97, 149)
shape = SubResource("RectangleShape2D_pdaes")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(97.5, 148)
shape = SubResource("RectangleShape2D_gvlfw")

[node name="attack" type="Timer" parent="."]
process_mode = 3
autostart = true

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="attack" to="." method="_on_attack_timeout"]
